fix #4019 Dark mode ColoredDecimalPlacesWithZerosText not working as intended

--- a/desktop/src/main/java/bisq/desktop/theme-dark.css
+++ b/desktop/src/main/java/bisq/desktop/theme-dark.css
@@ -294,8 +294,7 @@
 }
 
 .zero-decimals {
-    -fx-text-fill: -bs-decimals;
-    -fx-fill: -bs-decimals;
+    -bs-text-color: -bs-color-gray-3;
 }
 
 .confirmation-label {
